# smtp-s3-dump

./: Cargo.toml  Containerfile  README.md
.github/workflows/: on-push.yml  on-release.yml
.sqlx/: query-3614ff7bcb02eca1a8bfb48e276393813433c2d1e093042bfa524f8080894bab.json  query-3c031703b32f72ba25cd5a9eb57c7783e185c7b837d8258a5afa22818e43de31.json
src/: db.rs  main.rs  notify.rs  s3.rs  smtp.rs  tls.rs
