[package]
name = "smtp-s3-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1.6.0"
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
bytes = "1"
futures = "0.3.28"
mail-parser = "0.9.1"
mime_guess = "2"
notify = { version = "6.1.1", default-features = false }
notify-debouncer-mini = { version = "0.4.1", default-features = false }
# rs-smtp = "1.0.1"
rust-smtp-server = { path = "../rust-smtp-server" }
rustls-pemfile = "1.0.3"
serde_json = "1.0.107"
thiserror = "1"
tokio = { version = "1", features = ["tracing", "macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std", "registry", "fmt"] }
